Basic desktop Java build with Gradle
Add a subproject ":desktop" for 'Desktop Java' builds of JavaThemis.
This will produce a JAR with Java bytecode only, suitable for use by
desktop Java projects.

You can build it with

    ./gradlew :desktop:build

and collect artifacts from "src/wrappers/themis/java/build/jar".

The resulting JAR file is named "java-themis" because the name "themis"
is already taked by AndroidThemis.

--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -50,6 +50,9 @@ jobs:
         run: |
           make all themis_jni
           sudo make install themis_jni_install
+      - name: Build JavaThemis
+        run: |
+          ./gradlew --no-daemon :desktop:build
       # TODO: run JavaThemis unit tests, once we have them,
       #       but for now we're only testing JNI build
       - name: Check JavaThemis loading
