--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ project(':boringssl').projectDir = new File('third_party/boringssl')
 
 include ':android'
 project(':android').projectDir = new File('src/wrappers/themis/android')
+
+include ':desktop'
+project(':desktop').projectDir = new File('src/wrappers/themis/java')
