Run JUnit tests during Gradle builds
The "build" target already runs tests if they are set up. Configure
JUnit test compilation and runner.

Note that JavaThemis requires JNI library to be loaded. By default it is
installed into a location that is not present in the Java library search
path. We need to explicitly add "/usr/local/lib" to "java.library.path"
property. Also note that Gradle will run JUnit stuff in a separate JVM
so we need to pass the system property to that JVM from the main one.

--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -4,6 +4,20 @@ sourceSets {
     main {
         java.srcDirs = ['.']
     }
+    test {
+        java.srcDirs = ['../../../../tests/themis/wrappers/android']
+    }
+}
+
+dependencies {
+    testImplementation 'junit:junit:4.12'
+}
+
+test {
+    useJUnit()
+
+    // Pass JVM options to the forked one used for test
+    systemProperty "java.library.path", System.getProperty("java.library.path")
 }
 
 // Tweak the resulting JAR name so it's not called "java".
