--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -50,25 +50,12 @@ jobs:
         run: |
           make all themis_jni
           sudo make install themis_jni_install
-      - name: Build JavaThemis
+      - name: Build and test JavaThemis
+        # Set native library search path for Java explicitly since most
+        # distribution-provided JVMs do not look there by default.
         run: |
-          ./gradlew --no-daemon :desktop:build
-      # TODO: run JavaThemis unit tests, once we have them,
-      #       but for now we're only testing JNI build
-      - name: Check JavaThemis loading
-        run: |
-          cat > Test.java <<EOF
-              public class Test {
-                  static {
-                      System.loadLibrary("themis_jni");
-                  }
-                  public static void main(String[] args) {
-                      System.out.println("themis_jni loaded!");
-                  }
-              }
-          EOF
-          javac Test.java
-          java -Djava.library.path=/usr/local/lib Test
+          ./gradlew --no-daemon -Djava.library.path=/usr/local/lib \
+            :desktop:build
 
   android-tests:
     name: Android emulator
