--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@
 #
 # [1]: https://docs.gradle.org/current/userguide/multi_project_builds.html#sec:configuration_on_demand
 org.gradle.configureondemand=true
+
+# Versions of AndroidThemis and JavaThemis packages.
+androidThemisVersion=0.12.0
+javaThemisVersion=0.12.0
