--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ org.gradle.configureondemand=true
 # Versions of AndroidThemis and JavaThemis packages.
 androidThemisVersion=0.12.0
 javaThemisVersion=0.12.0
+
+# Android Studio insists that this is set to use JUnit test runner.
+android.useAndroidX=true
