Downgrade Gradle library to 3.5.3
Android Studio recommends using current latest stable version 3.6.3, but
it seems to have some issues with NDK version detection. Since we have
different NDK versions in our CI environments, we can't use the version
which fails to work with them.

Gradle tools v3.6.3 fail the build and require a particular version of
NDK, for example:

    * What went wrong:
    A problem occurred configuring project ':android'.
    > No version of NDK matched the requested version 20.0.5594570. Versions available locally: 21.0.6113669

Version 3.5.X does not seem to have such issues, so let's use it then.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.library'
 
 buildscript {
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        // Using older version since 3.6.X has issues with NDK versioning:
+        // https://github.com/gradle/gradle/issues/12440
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
         // Two necessary plugins for uploading .aar to bintray
         // from: https://android.jlelse.eu/how-to-distribute-android-library-in-a-convenient-way-d43fb68304a7
