Revert to using Gradle tools 3.2.1
It seems that 3.5.3 does not work either. I don't want to spend more
time on this discretionary upgrade, so just revert to the version which
is known to work and let's keep it pinned that way until we need to
upgrade to have some new features or bug fixes.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     dependencies {
         // Using older version since 3.6.X has issues with NDK versioning:
         // https://github.com/gradle/gradle/issues/12440
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        // And 3.5.X fails to link ARM binaries correctly, so we're staying
+        // on this Gradle version until it breaks or we *need* an upgrade:
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // Two necessary plugins for uploading .aar to bintray
         // from: https://android.jlelse.eu/how-to-distribute-android-library-in-a-convenient-way-d43fb68304a7
