--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -10,6 +10,9 @@ sourceSets {
 }
 
 dependencies {
+    // Nullable annotations, etc.
+    implementation 'org.jetbrains:annotations:16.0.2'
+    // Unit tests
     testImplementation 'junit:junit:4.13'
 }
 
