Desktop Java builds with Gradle (#633)
* Move Android build.gradle file from root

Introduce a subproject ":android" for AndroidThemis builds. We can't
continue using top-level build.gradle for everything if we are going
to use Gradle for Desktop Java too.

This changes the invocation strings for targets which now need to be
qualified (by prefixing ":android:...").

Leave the top-level file with some common definitions. This allows to
not write them in each subproject and to use "./gradlew" right from
the repository root.

* Basic desktop Java build with Gradle

Add a subproject ":desktop" for 'Desktop Java' builds of JavaThemis.
This will produce a JAR with Java bytecode only, suitable for use by
desktop Java projects.

You can build it with

    ./gradlew :desktop:build

and collect artifacts from "src/wrappers/themis/java/build/jar".

The resulting JAR file is named "java-themis" because the name "themis"
is already taked by AndroidThemis.

* Upgrade to Gradle 5.6

Debian stable has upgraded its default Java version to 11. Gradle 4.X
does not support Java 11. This version is supported only since 5.0.
Upgrade to latest Gradle 5.X version.

Note that *the latest* version branch is Gradle 6.X. We won't jump
versions that fast.

Gradle 5.X requires Java 8 (previously it required Java 7). This cuts
some older systems that ship with only Java 7:

  - Debian 8 "Jessie" - oldoldstable, no security support since
    June 2018, LTS support lapses in July 2020

(Only for JavaThemis, obviously.)

* Enable Gradle's "configure on demand"

By default Gradle will configure all subprojects of a top-level project.
For us that means that we'll force AndroidThemis configuration even if
the user is trying to build JavaThemis for desktop. That will require
a properly installed and configured Android SDK, completely unnecessary.

Thankfully, Gradle also have an experimental "configure on demand"
mode which will configure only the pro

--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -50,22 +50,12 @@ jobs:
         run: |
           make all themis_jni
           sudo make install themis_jni_install
-      # TODO: run JavaThemis unit tests, once we have them,
-      #       but for now we're only testing JNI build
-      - name: Check JavaThemis loading
+      - name: Build and test JavaThemis
+        # Set native library search path for Java explicitly since most
+        # distribution-provided JVMs do not look there by default.
         run: |
-          cat > Test.java <<EOF
-              public class Test {
-                  static {
-                      System.loadLibrary("themis_jni");
-                  }
-                  public static void main(String[] args) {
-                      System.out.println("themis_jni loaded!");
-                  }
-              }
-          EOF
-          javac Test.java
-          java -Djava.library.path=/usr/local/lib Test
+          ./gradlew --no-daemon -Djava.library.path=/usr/local/lib \
+            :desktop:build
 
   android-tests:
     name: Android emulator
@@ -76,7 +66,7 @@ jobs:
         with:
           submodules: true
       - name: Build Themis
-        run: ./gradlew --no-daemon assembleDebug
+        run: ./gradlew --no-daemon :android:assembleDebug
       # This works reliably only in macOS runners which have HAXM available.
       # Ubuntu runners do not have KVM enabled, modern x86 emulators do not
       # work without KVM, and ARM emulator is abysmally slow.
@@ -84,4 +74,4 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew --no-daemon connectedAndroidTest
+          script: ./gradlew --no-daemon :android:connectedAndroidTest
