Target Java 7 since that's what Android uses
We require Java 8 for building with embedded Gradle wrapper, however
Android still targets Java 7 by default at the moment. It is possible
to build for Java 8, but that changes the requirements to JVM. We'd
like to avoid cutting support unless we don't really need it.

Make it explicit that we're building for Java 7 for Android, and build
desktop Java code for Java 7 too. We use Java 7 features in the code
so we cannot build with Java 6. That train is now gone.

Also, change the annotation library to use the compatibility version
which supports Java 7.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -17,8 +17,8 @@ buildscript {
 
 dependencies {
     implementation project(":boringssl")
-    // Nullable annotations, etc.
-    implementation 'org.jetbrains:annotations:16.0.2'
+    // Use a compatibility version to support Java 6.
+    implementation 'org.jetbrains:annotations-java5:16.0.2'
     // Instrumentation tests
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
@@ -35,6 +35,12 @@ android {
         targetSdkVersion 28
         // Our tests are written in JUnit, set default runner appropriately
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    // Compile for Java 7.
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     sourceSets {
