Use Apache Commons for polyfill after all
Unfortunately, DatatypeConverter is not available on Android too, so we
have to use an external library.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     // Instrumentation tests
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'commons-codec:commons-codec:1.14'
 }
 
 android {
