Use older version of Common Codec library
Unfortunately, we cannot use the latest version of the codec library
because some Android systems (e.g., API 24) already include an older
version of some of the Commons' classes. They are loaded before our
dependencies fetched by Gradle and break the party.

Investigation of Android source code shows that they're using what
appears to be version 1.2 of the library (the current version is 1.14).
Okay, so that limits us to the API provided by 1.2. Fine *sigh*

--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -15,7 +15,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:16.0.2'
     // Unit tests
     testImplementation 'junit:junit:4.13'
-    testImplementation 'commons-codec:commons-codec:1.14'
+    // Keep it at 1.2, see tests/themis/wrappers/android/com/cossacklabs/themis/test/Base64.java
+    testImplementation 'commons-codec:commons-codec:1.2'
 }
 
 test {
