Update JavaThemis Secure Cell API (#634)
* New API of Secure Cell

Introduce new, interface-based API of Secure Cell. Current API has
a number of issues described in RFC 3.9, notably the run-time mode
setting and not-quite-secure support of String inputs which interferes
with passphrase API. That's why we introduce a new interface which
should rectify these issues.

The users will deal with *interfaces* of the base SecureCell class:
SecureCell.Seal, TokenProtect, ContextImprint. They will take into
account differences in inputs and outputs of these modes. They also
allow to introduce passphrase API which actually has the same API
after the initialization.

Using interfaces as opposed to classes allows us to hide unnecessary
implementation details and do not expose the users to a number of
classes that they don't actually need to interact with.

This is also a nice point to start paying more attention to JavaDocs,
with better descriptions of APIs and versioning.

* Implement new Secure Cell API

Add implementation of SecureCell interfaces. These are package-private
classes constructed by static factory methods of the base class. They
provide improved API with the similar behavior.

The differences include naming and the fact that encryption code path
no longer uses checked SecureCellException, instead wrapping it into
unchecked RuntimeException. This is because encryption code path is
unlikely to fail due to business errors as opposed to programming
errors, so there is no need to enforce immediate error checking with
checked exception. This is not true for decryption path.

Note that native methods do not throw exceptions on their own right now.
Instead they indicate errors by returning "null". This would be nice to
get right later.

* Nullability annotations

Mark new interface methods with @NotNull and @Nullable annotations where
appropriate. This improves IDE experience and Kotlin integration.

Contracts enable even more 

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -17,9 +17,13 @@ buildscript {
 
 dependencies {
     implementation project(":boringssl")
+    // Use a compatibility version to support Java 6.
+    implementation 'org.jetbrains:annotations-java5:16.0.2'
     // Instrumentation tests
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    // Keep it at 1.2, see tests/themis/wrappers/android/com/cossacklabs/themis/test/Base64.java
+    androidTestImplementation 'commons-codec:commons-codec:1.2'
 }
 
 android {
@@ -33,6 +37,12 @@ android {
         targetSdkVersion 28
         // Our tests are written in JUnit, set default runner appropriately
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    // Compile for Java 7.
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     sourceSets {
