--- a/src/wrappers/themis/java/build.gradle
+++ b/src/wrappers/themis/java/build.gradle
@@ -10,7 +10,13 @@ sourceSets {
 }
 
 dependencies {
+    // Nullable annotations, etc.
+    // Use a compatibility version to support Java 6.
+    implementation 'org.jetbrains:annotations-java5:16.0.2'
+    // Unit tests
     testImplementation 'junit:junit:4.13'
+    // Keep it at 1.2, see tests/themis/wrappers/android/com/cossacklabs/themis/test/Base64.java
+    testImplementation 'commons-codec:commons-codec:1.2'
 }
 
 test {
@@ -25,10 +31,10 @@ archivesBaseName = 'java-themis'
 version = javaThemisVersion
 group = 'com.cossacklabs'
 
-// Compile for Java 8.
+// Compile for Java 7.
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
 }
 
 // Tweak compiler options.
