--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 buildscript {
     dependencies {
@@ -12,6 +13,9 @@ buildscript {
         // from: https://android.jlelse.eu/how-to-distribute-android-library-in-a-convenient-way-d43fb68304a7
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+
+        // Kotlin plugin for Android
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -24,6 +28,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     // Keep it at 1.2, see tests/themis/wrappers/android/com/cossacklabs/themis/test/Base64.java
     androidTestImplementation 'commons-codec:commons-codec:1.2'
+    // Kotlin for instrumentation tests
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 android {
@@ -76,6 +82,15 @@ android {
         ndkBuild {
             path "../../../../jni/Android.mk"
         }
+    }
+
+    // Due to various renames in annotation modules, Android's DEX compiler is confused.
+    // Remove them from compiled code to avoid issues.
+    // https://github.com/vimeo/vimeo-networking-java/issues/285
+    // https://github.com/vimeo/vimeo-networking-java/pull/321
+    configurations {
+        cleanedAnnotations
+        compile.exclude group: 'org.jetbrains' , module:'annotations'
     }
 }
 
