Remove Python 2 from git tests

--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [python2, python3]
+        python: [python3]
       fail-fast: false
     env:
       PYTHON: ${{ matrix.python }}
