--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -473,8 +473,13 @@ jobs:
             cd $HOME/emsdk
             git reset --hard
             git pull
-            ./emsdk install  latest-fastcomp
-            ./emsdk activate latest-fastcomp
+            # FIXME(ilammy, 2020-06-07): migrate to "upstream" flavor
+            # LLVM flavor of Emscripten has some issues compiling our code,
+            # and latest versions of the fastcomp flavor started giving out
+            # compiler warnings (turned into errors by the build system).
+            # We need to migrate, but for the time being use the old version.
+            ./emsdk install  1.39.16-fastcomp
+            ./emsdk activate 1.39.16-fastcomp
       - checkout
       - run:
           name: Sync submodules
@@ -611,8 +616,13 @@ jobs:
             cd $HOME/emsdk
             git reset --hard
             git pull
-            ./emsdk install  latest-fastcomp
-            ./emsdk activate latest-fastcomp
+            # FIXME(ilammy, 2020-06-07): migrate to "upstream" flavor
+            # LLVM flavor of Emscripten has some issues compiling our code,
+            # and latest versions of the fastcomp flavor started giving out
+            # compiler warnings (turned into errors by the build system).
+            # We need to migrate, but for the time being use the old version.
+            ./emsdk install  1.39.16-fastcomp
+            ./emsdk activate 1.39.16-fastcomp
 
       # themis
       - checkout
