--- a/.github/workflows/test-wasm.yaml
+++ b/.github/workflows/test-wasm.yaml
@@ -10,6 +10,7 @@ on:
       - 'tests/common/**'
       - 'tests/soter/**'
       - 'tests/themis/**'
+      - '!tests/themis/wrappers/android/**'
       - 'third_party/boringssl/src/**'
       - '**/*.mk'
       - 'Makefile'
