Reorder dependencies to avoid publishing issues
Bintray publishing task started to throw errors like this after
successfully publishing Android Themis:

    > Task :bintrayPublish FAILED

    FAILURE: Build failed with an exception.

    * Where:
    Build file '/projects/src/wrappers/themis/java/build.gradle' line: 7

    * What went wrong:
    A problem occurred evaluating project ':desktop'.
    > Cannot change dependencies of configuration ':desktop:classpath' after it has been resolved.

How is ":desktop" project related to the ":android" subproject? No idea,
they shouldn't depend on each other.

The Internet suggests that disabling on-demand configuration helps [1].
It does. Though, this is the feature designed for to avoid this
situation in the first place -- to not have ":desktop" configured when
only ":android" is used. But whatever. At least they are honest about
this feature being experimental.

Gradle only knows what happens here.

Yes, this change means that you will have to have Android SDK installed
and configured to build desktop Java Themis. I'm sorry.

[1]: https://stackoverflow.com/questions/42552511/cannot-change-dependencies-of-configuration-compile-after-it-has-been-resolve

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
-# Enable "configuration on demand" [1] to allow building Themis for
-# Desktop Java without having Android SDK installed.
+# We'd like to enable "configuration on demand" [1] to allow building Themis
+# for Desktop Java without having Android SDK installed, but for some reason
+# it breaks Bintray publishing with a weird error [2]. Keep it disabled.
 #
 # [1]: https://docs.gradle.org/current/userguide/multi_project_builds.html#sec:configuration_on_demand
-org.gradle.configureondemand=true
+# [2]: https://stackoverflow.com/questions/42552511/cannot-change-dependencies-of-configuration-compile-after-it-has-been-resolve
+org.gradle.configureondemand=false
 
 # Versions of AndroidThemis and JavaThemis packages.
 androidThemisVersion=0.13.0
