Fix AndroidThemis publishing (#669)
* Update Android artifact path for publishing

Introducing desktop Java build has moved Android project into a
subproject, not a top-level project. This changes the artifact name
which is based on the directory where build.gradle resides. It changes
from "projects" (repo directory name in the Docker container we use)
to "android" (that is "src/wrappers/themis/android").

Also, Gradle seems to be really confused with $buildDir when subprojects
are used so replace it with just "build" (relative to "build.gradle").

* Use only publication-based uploads

For now, we don't publish any additional archives except for the AAR.
Later on we will need to publish source code and Javadoc JARs to be able
to host Themis on JCenter, but for now remove the configuration-based
uploads as recommended by Bintray plugin docs [1].

[1]: https://github.com/bintray/gradle-bintray-plugin#buildgradle

I guess later it will be possible to just add more artifacts to the
publication and avoid messing with configurations and manual pom.xml
generation. Or I hope, at least...

* Update Gradle Bintray plugin to 1.8.1

Current version tends to do silly things after switching to subprojects.
For example, it fails to locate the subproject artifacts and attempts to
upload some nonsensical files instead, which fails with cryptic errors:

   > Task :android:bintrayUpload FAILED

   FAILURE: Build failed with an exception.

   * What went wrong:
    Execution failed for task ':android:bintrayUpload'.
    > Could not upload to 'https://api.bintray.com/content/cossacklabs/maven/themis/0.13.0/property(class java/lang/String, fixed(class java/lang/String, com/cossacklabs/com))/property(class java.lang.String, fixed(class java.lang.String, themis))/property(class java.lang.String, fixed(class java.lang.String, 0.13.0))/property(class java.lang.String, fixed(class java.lang.String, themis))-property(class java.lang.String, fixed(class java.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
         // Two necessary plugins for uploading .aar to bintray
         // from: https://android.jlelse.eu/how-to-distribute-android-library-in-a-convenient-way-d43fb68304a7
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
 
         // Kotlin plugin for Android
@@ -102,7 +102,7 @@ apply plugin: 'maven-publish'
 publishing {
     publications {
         Production(MavenPublication) {
-            artifact("$buildDir/outputs/aar/projects-release.aar")
+            artifact("build/outputs/aar/android.aar")
             groupId 'com.cossacklabs.com'
             artifactId 'themis'
             version androidThemisVersion
@@ -114,7 +114,6 @@ bintray {
     // Get Bintray credential from environment variable
     user = System.getenv('BINTRAY_USER') // Get bintray User
     key = System.getenv('BINTRAY_KEY') // Get bintray API Key from https://bintray.com/profile/edit -> APIKey
-    configurations = ['archives']
     pkg {
         repo = 'maven'
         name = 'themis'
