Remove ObjCThemis.xcodeproj
The idea behind building "objcthemis.framework" has been to unify import
syntax between Carthage and CocoaPods. Unfortunately, it turned out to
be a mistake. "objcthemis.framework" does not work without
"themis.framework" being present alongside it because of how module
resolution works. Despite "objcthemis.framework" providing the same
"themis" module as "themis.framework", the compiler will look for a
framework named "themis.framework" when resolving "import themis".

Moreover, the original issue that "objcthemis.framework" has been called
to rectify can be resolved more elegantly by importing the module:

    @import themis;

which work well with "themis.framework" in both Carthage and CocoaPods.

Since "objcthemis.framework" does not bring any value, remove it. Move
all new things added to ObjCThemis.xcodeproj into Themis.xcodeproj
(such as testing Swift 4 vs 5). Remove the import warning. Now Carthage
will build only one framework: "themis.framework" from Themis.xcodeproj.

I am sorry for the trouble and confusion of this fizzled migration.

--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -124,7 +124,7 @@ jobs:
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData  \
-            -project ObjCThemis.xcodeproj \
+            -project Themis.xcodeproj \
             -scheme "Test Themis (Swift 4, macOS)" \
             test
       - name: Run unit tests (Swift 5, macOS)
@@ -133,7 +133,7 @@ jobs:
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData  \
-            -project ObjCThemis.xcodeproj \
+            -project Themis.xcodeproj \
             -scheme "Test Themis (Swift 5, macOS)" \
             test
       - name: Run unit tests (Swift 4, iOS Simulator)
@@ -142,7 +142,7 @@ jobs:
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData  \
-            -project ObjCThemis.xcodeproj \
+            -project Themis.xcodeproj \
             -scheme "Test Themis (Swift 4, iOS)" \
             -sdk iphonesimulator \
             -destination "platform=iOS Simulator,name=${TEST_IPAD}" \
@@ -153,7 +153,7 @@ jobs:
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData  \
-            -project ObjCThemis.xcodeproj \
+            -project Themis.xcodeproj \
             -scheme "Test Themis (Swift 5, iOS)" \
             -sdk iphonesimulator \
             -destination "platform=iOS Simulator,name=${TEST_IPHONE}" \
@@ -250,8 +250,8 @@ jobs:
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
-            -project ObjCThemis.xcodeproj \
-            -scheme "ObjCThemis (iOS)" \
+            -project Themis.xcodeproj \
+            -scheme "Themis (iOS)" \
             -sdk iphoneos \
             -destination "generic/platform=iOS" \
             build
