--- a/Themis.xcodeproj/xcshareddata/xcschemes/Test Themis (Swift 5, iOS).xcscheme
+++ b/Themis.xcodeproj/xcshareddata/xcschemes/Test Themis (Swift 5, iOS).xcscheme
@@ -5,22 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9F4A24A0223A8D7F005CB63A"
-               BuildableName = "objcthemis.framework"
-               BlueprintName = "Themis (iOS)"
-               ReferencedContainer = "container:ObjCThemis.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -28,6 +12,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9F70B2E6241D17A3009CB629"
+               BuildableName = "Test Themis (Swift 5, iOS).xctest"
+               BlueprintName = "Test Themis (Swift 5, iOS)"
+               ReferencedContainer = "container:Themis.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -47,15 +41,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F4A24A0223A8D7F005CB63A"
-            BuildableName = "objcthemis.framework"
-            BlueprintName = "Themis (iOS)"
-            ReferencedContainer = "container:ObjCThemis.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
