--- a/Themis.xcodeproj/xcshareddata/xcschemes/Themis (macOS).xcscheme
+++ b/Themis.xcodeproj/xcshareddata/xcschemes/Themis (macOS).xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1010"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9F00E8D6223C197900EC1EF3"
-               BuildableName = "themis.framework"
+               BuildableName = "objcthemis.framework"
                BlueprintName = "Themis (macOS)"
                ReferencedContainer = "container:Themis.xcodeproj">
             </BuildableReference>
@@ -28,9 +28,27 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9F70B31B2420E176009CB629"
+               BuildableName = "Test Themis (Swift 4, macOS).xctest"
+               BlueprintName = "Test Themis (Swift 4, macOS)"
+               ReferencedContainer = "container:Themis.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9F70B2BB241D0FEC009CB629"
+               BuildableName = "Test Themis (Swift 5, macOS).xctest"
+               BlueprintName = "Test Themis (Swift 5, macOS)"
+               ReferencedContainer = "container:Themis.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +60,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F00E8D6223C197900EC1EF3"
-            BuildableName = "themis.framework"
-            BlueprintName = "Themis (macOS)"
-            ReferencedContainer = "container:Themis.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -64,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9F00E8D6223C197900EC1EF3"
-            BuildableName = "themis.framework"
+            BuildableName = "objcthemis.framework"
             BlueprintName = "Themis (macOS)"
             ReferencedContainer = "container:Themis.xcodeproj">
          </BuildableReference>
